--- a/1des/02-lima/aula13/landingbootstrap/index.html
+++ b/1des/02-lima/aula13/landingbootstrap/index.html
@@ -13,7 +13,18 @@
     <header>
         <h1>CONECT Produtos</h1>
     </header>
-    <main></main>
+    <main class="container">
+        <div id="container" class="row">
+            <div id="model0" class="card col-lg-3 m-2">
+                <h2 class="card-title">Tipo</h2>
+                <p class="card-text">Produto</p>
+                <img src="https://raw.githubusercontent.com/wellifabio/senai2023/main/1des/02-lima/aula13/assets/camiseta.webp"
+                    alt="Imagem Padrão" class="img">
+                <button class="btn btn-secondary">Detalhes</button>
+                <p class="card-footer">Preço</p>
+            </div>
+        </div>
+    </main>
     <footer>
         <p>© 2023 CONECT</p>
         <label id="rodape"></label>
@@ -31,5 +42,5 @@
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
 </body>
-
+<script src="./script.js"></script>
 </html>
