--- a/1des/02-lima/aula13/landingbootstrap/index.html
+++ b/1des/02-lima/aula13/landingbootstrap/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <header>
+    <header class="text-center">
         <h1>CONECT Produtos</h1>
     </header>
     <main class="container">
-        <div id="container" class="row">
-            <div id="model0" class="card col-lg-3 m-2">
-                <h2 class="card-title">Tipo</h2>
+        <div id="container" class="row justify-content-md-center">
+            <div id="model0" class="card col-lg-3 m-2 justify-content-between">
+                <h2 class="card-title text-center">Tipo</h2>
                 <p class="card-text">Produto</p>
                 <img src="https://raw.githubusercontent.com/wellifabio/senai2023/main/1des/02-lima/aula13/assets/camiseta.webp"
                     alt="Imagem Padrão" class="img">
@@ -25,7 +25,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="text-center">
         <p>© 2023 CONECT</p>
         <label id="rodape"></label>
         <script>
