--- a/1des/02-lima/aula13/landingbootstrap/index.html
+++ b/1des/02-lima/aula13/landingbootstrap/index.html
@@ -10,8 +10,13 @@
 </head>
 
 <body>
-    <header class="text-center">
-        <h1>CONECT Produtos</h1>
+    <header class="col justify-content-center">
+        <div class="row justify-content-around">
+            <h1>CONECT Produtos</h1>
+            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+                Novo
+            </button>
+        </div>
     </header>
     <main class="container">
         <div id="container" class="row justify-content-md-center">
@@ -35,6 +40,55 @@
             rodape.innerHTML += new Date().toLocaleTimeString();
         </script>
     </footer>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Cadastrar novo produto</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="produto">Produto</label>
+                            <input type="text" class="form-control" name="produto" placeholder="Nome do produto" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="tipo">Tipo</label>
+                            <select class="form-control" name="tipo">
+                                <option>Vestuário</option>
+                                <option>Decoração</option>
+                                <option>Colecionáveis</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="custo">Custo</label>
+                            <input type="number" class="form-control" name="custo" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="preco">Preço</label>
+                            <input type="number" class="form-control" name="preco" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="valor">Valor</label>
+                            <input type="number" class="form-control" name="valor" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="img">Imagem</label>
+                            <textarea class="form-control" name="img" rows="3" placeholder="Cole a URL da imagem"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-primary">Adicionar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -43,4 +97,5 @@
         crossorigin="anonymous"></script>
 </body>
 <script src="./script.js"></script>
+
 </html>
