--- a/1des/02-lima/aula13/landing_bootstrap_03/index.html
+++ b/1des/02-lima/aula13/landing_bootstrap_03/index.html
@@ -13,9 +13,6 @@
     <header class="col justify-content-center">
         <div class="row justify-content-around">
             <h1>CONECT Produtos</h1>
-            <button type="button" class="btn btn-primary m-1" data-toggle="modal" data-target="#cadastro">
-                Novo
-            </button>
         </div>
     </header>
     <main class="container">
@@ -32,79 +29,27 @@
             rodape.innerHTML += new Date().toLocaleTimeString();
         </script>
     </footer>
-    <!-- Modal Cadastro -->
-    <div class="modal fade" id="cadastro" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Cadastrar novo produto</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <form id="novo">
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label for="produto">Produto</label>
-                            <input type="text" class="form-control" name="produto" id="produto"
-                                placeholder="Nome do produto" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="tipo">Tipo</label>
-                            <select class="form-control" name="tipo" id="tipo">
-                                <option>Vestuário</option>
-                                <option>Decoração</option>
-                                <option>Colecionáveis</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="custo">Custo</label>
-                            <input type="number" class="form-control" name="custo" id="custo" step="any" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="preco">Preço</label>
-                            <input type="number" class="form-control" name="preco" id="preco" step="any" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="valor">Valor</label>
-                            <input type="number" class="form-control" name="valor" id="valor" step="any" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="img">Imagem</label>
-                            <textarea class="form-control" name="img" id="img" rows="3"
-                                placeholder="Cole a URL da imagem"></textarea>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                        <button type="submit" class="btn btn-primary">Adicionar</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
     <!-- Modal Detalhes -->
     <div class="modal fade" id="detalhes" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Cadastrar novo produto</h5>
+                    <h5 class="modal-title">Detsalhes do produto</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <form id="alterar">
+                <form id="formDisabled">
                     <div class="modal-body">
                         <div class="form-group">
                             <input type="hidden" name="indice" id="indice">
-                            <input type="hidden" name="id">
                             <label for="produto">Produto</label>
                             <input type="text" class="form-control" name="produto" id="d_produto"
-                                placeholder="Nome do produto" required>
+                                placeholder="Nome do produto" disabled>
                         </div>
                         <div class="form-group">
                             <label for="tipo">Tipo</label>
-                            <select class="form-control" name="tipo" id="d_tipo">
+                            <select class="form-control" name="tipo" id="d_tipo" disabled>
                                 <option>Vestuário</option>
                                 <option>Decoração</option>
                                 <option>Colecionáveis</option>
@@ -112,26 +57,24 @@
                         </div>
                         <div class="form-group">
                             <label for="custo">Custo</label>
-                            <input type="number" class="form-control" name="custo" id="d_custo" step="any" required>
+                            <input type="number" class="form-control" name="custo" id="d_custo" step="any" disabled>
                         </div>
                         <div class="form-group">
                             <label for="preco">Preço</label>
-                            <input type="number" class="form-control" name="preco" id="d_preco" step="any" required>
+                            <input type="number" class="form-control" name="preco" id="d_preco" step="any" disabled>
                         </div>
                         <div class="form-group">
                             <label for="valor">Valor</label>
-                            <input type="number" class="form-control" name="valor" id="d_valor" step="any" required>
+                            <input type="number" class="form-control" name="valor" id="d_valor" step="any" disabled>
                         </div>
                         <div class="form-group">
                             <label for="img">Imagem</label>
-                            <textarea class="form-control" name="img" id="d_img" rows="3"
-                                placeholder="Cole a URL da imagem"></textarea>
+                            <img name="img" class="img col-lg-12" id="d_img" alt="Imagem meramente ilustrativa">
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                        <button type="button" class="btn btn-danger" onclick="excluir(indice.value)">Excluir</button>
-                        <button type="submit" class="btn btn-primary">Atualizar</button>
+                        <button type="button" class="btn btn-primary" onclick="comprar(indice.value)">Comprar</button>
                     </div>
                 </form>
             </div>
