--- a/1des/02-lima/aula13/landing_crud/index.html
+++ b/1des/02-lima/aula13/landing_crud/index.html
@@ -88,7 +88,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Cadastrar novo produto</h5>
+                    <h5 class="modal-title">Detalhes produto</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -122,10 +122,11 @@
                             <label for="valor">Valor</label>
                             <input type="number" class="form-control" name="valor" id="d_valor" step="any" required>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group text-center">
                             <label for="img">Imagem</label>
-                            <textarea class="form-control" name="img" id="d_img" rows="3"
+                            <textarea class="form-control" name="img" id="d_img" rows="2"
                                 placeholder="Cole a URL da imagem"></textarea>
+                            <img class="img col-lg-4" name="imgv" alr="Imagem do produto" src="./noimage.jpg">
                         </div>
                     </div>
                     <div class="modal-footer">
