--- a/1des/02-lima/aula16/exemplos/modal_cards.html
+++ b/1des/02-lima/aula16/exemplos/modal_cards.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modal Novo</title>
+    <title>Modal e Cards</title>
 </head>
+<style>
+    body{
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    button{
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+</style>
 <body>
-    
+    <header>
+        <button id="novo">Novo</button>
+    </header>
+    <main class="container"></main>
+    <footer></footer>
 </body>
+<script>
+    const container = document.querySelector(".container");
+    const novo = document.querySelector("#novo");
+</script>
 </html>
