--- a/1des/02-lima/aula16/exemplos/modal_cards.html
+++ b/1des/02-lima/aula16/exemplos/modal_cards.html
@@ -28,6 +28,17 @@
     </header>
     <main class="container"></main>
     <footer></footer>
+    <div class="modal" id="modalNovo">
+        <div class="area">
+            <h2>Novo Card</h2>
+            <form id="formNovo">
+                <input type="text" name="titulo" id="titulo" placeholder="Título">
+                <input type="text" name="descricao" id="descricao" placeholder="Descrição">
+                <button>Cancelar</button>
+                <button type="submit">Criar</button>
+            </form>
+        </div>
+    </div>
 </body>
 <script>
     const container = document.querySelector(".container");
