--- a/1des/02-lima/aula16/exemplos/modal_cards.html
+++ b/1des/02-lima/aula16/exemplos/modal_cards.html
@@ -14,12 +14,43 @@
         flex-direction: column;
         align-items: center;
     }
-    button{
+    button, input, textarea{
         padding: 10px 20px;
         border: none;
         border-radius: 5px;
         font-weight: bold;
+        margin: 10px;
         cursor: pointer;
+    }
+    input, textarea{
+        grid-column: 1/3;
+    }
+    .modal{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0,0,0,.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all .5s ease-in-out;
+    }
+    .area{
+        min-width: 30vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 1px 1px 10px rgba(0,0,0,.5);
+        padding: 10px;
+    }
+    form{
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 </style>
 <body>
@@ -33,7 +64,7 @@
             <h2>Novo Card</h2>
             <form id="formNovo">
                 <input type="text" name="titulo" id="titulo" placeholder="Título">
-                <input type="text" name="descricao" id="descricao" placeholder="Descrição">
+                <textarea name="descricao" id="descricao" placeholder="Descrição"></textarea>
                 <button>Cancelar</button>
                 <button type="submit">Criar</button>
             </form>
