--- a/1des/02-lima/aula16/exemplos/02_abrir_modal.html
+++ b/1des/02-lima/aula16/exemplos/02_abrir_modal.html
@@ -68,7 +68,7 @@
             <form id="formNovo">
                 <input type="text" name="titulo" id="titulo" placeholder="Título">
                 <textarea name="descricao" id="descricao" placeholder="Descrição"></textarea>
-                <button onclick="modalNovo.classList.add('oculto')">Cancelar</button>
+                <button type="button" onclick="modalNovo.classList.add('oculto')">Cancelar</button>
                 <button type="submit">Criar</button>
             </form>
         </div>
