--- a/1des/02-lima/aula16/exemplos/02_abrir_modal.html
+++ b/1des/02-lima/aula16/exemplos/02_abrir_modal.html
@@ -66,8 +66,8 @@
         <div class="area">
             <h2>Novo Card</h2>
             <form id="formNovo">
-                <input type="text" name="titulo" id="titulo" placeholder="Título">
-                <textarea name="descricao" id="descricao" placeholder="Descrição"></textarea>
+                <input type="text" name="titulo" id="titulo" placeholder="Título" required>
+                <textarea name="descricao" id="descricao" placeholder="Descrição" required></textarea>
                 <button type="button" onclick="modalNovo.classList.add('oculto')">Cancelar</button>
                 <button type="submit">Criar</button>
             </form>
