--- a/1des/02-lima/aula16/exemplos/03_modal_cards.html
+++ b/1des/02-lima/aula16/exemplos/03_modal_cards.html
@@ -105,7 +105,7 @@
             <form id="formNovo">
                 <input type="text" name="titulo" placeholder="Título" required>
                 <textarea name="descricao" placeholder="Descrição" required></textarea>
-                <button onclick="modalNovo.classList.add('oculto')">Cancelar</button>
+                <button type="button" onclick="modalNovo.classList.add('oculto')">Cancelar</button>
                 <button type="submit">Criar</button>
             </form>
         </div>
