--- a/1des/02-lima/aula16/exemplos/06_tabela.html
+++ b/1des/02-lima/aula16/exemplos/06_tabela.html
@@ -87,6 +87,7 @@
 
     table {
         border-collapse: collapse;
+        min-width: 70vw;
     }
 
     td {
@@ -119,7 +120,7 @@
                     <th>Índice</th>
                     <th>Título</th>
                     <th>Descrição</th>
-                    <th>Ação</th>
+                    <th>Ações</th>
                 </tr>
             </thead>
             <tbody class="tbody">
